# chambaikiemtra

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  sample-exam.txt
backend/: .env.example  Dockerfile  package.json  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: export.py  grading.py  health.py  templates.py
backend/app/core/: constants.py  error_handlers.py  exceptions.py  logging.py  responses.py
backend/app/schemas/: answer_key.py  common.py  export_request.py  grading_request.py  grading_response.py  student_result.py
backend/app/services/document_detection/: __init__.py  contour_detector.py  marker_detector.py  orientation_detector.py  perspective_corrector.py  sheet_detector.py
backend/app/services/duplicate_detection/: __init__.py  duplicate_checker.py  (+1 more)
backend/app/templates/: __init__.py
backend/app/temporary/: __init__.py  cleanup.py  memory_file.py  temporary_file.py
backend/app/utils/: file_utils.py  image_utils.py
backend/datasets/blank-answers/: README.md
backend/datasets/blurred/: README.md
backend/datasets/dark/: README.md
backend/datasets/multiple-answers/: README.md
backend/datasets/shadow/: README.md
backend/datasets/tilted/: README.md
backend/datasets/valid/: README.md
backend/scripts/: cleanup_temp.py  evaluate_omr.py  generate_template.py
backend/src/: server.js
backend/tests/api/: README.md
backend/tests/evaluation/: README.md
backend/tests/integration/: README.md
backend/tests/unit/: README.md
(+134 files in other folders)
