[project]
name = "omr-auto-grading-backend"
version = "0.1.0"
description = "FastAPI backend for automatic OMR grading"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "opencv-python-headless==4.10.0.84",
  "numpy==2.2.1",
  "openpyxl==3.1.5",
  "pydantic==2.10.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
